--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   http: ^1.1.0
   image_picker: ^1.0.4
   image: ^4.1.3
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
